fixes nav and dash overflow

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   max-width: 100vw;
   max-height: 120px;
   min-height: 90px;
+  box-sizing: border-box;
 }
 
 .header-bar-play {
@@ -43,12 +44,21 @@ h1 {
 }
 
 .logo {
-  width: 50%;
+  width: 20%;
+  width: 100%;
+  max-height: 120px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 .navigation-bar-nav {
-  width: 50%;
+  width: 80%;
   height: 100%;
+  max-height: 120px;
   vertical-align: middle;
+  box-sizing: border-box;
 }
 .navigation-bar {
   height: 100%;
@@ -66,13 +76,15 @@ h1 {
 }
 
 .navigation-bar-nav li {
-  margin-right: 30px;
+  margin-right: 5px;
   vertical-align: middle;
 }
 
 .navLinks {
   text-align: right;
   vertical-align: middle;
+  padding-left: 0px;
+  margin: 0px;
 }
 
 .navigation-bar h1 a {
@@ -145,6 +157,22 @@ footer a {
   padding: 2px;
 }
 
+@media only screen and (max-width: 528px) {
+  .navLinks {
+    margin: 0px;
+  }
+  .navLinks li {
+    display: block;
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+
+  .navigation-bar-nav {
+    width: 80%;
+    box-sizing: border-box;
+    padding: 0px;
+  }
+}
 @media only screen and (max-width: 575px) {
   #login,
   #register {
@@ -153,10 +181,6 @@ footer a {
 
   .no-show h3 {
     display: none;
-  }
-
-  .navLinks li {
-    font-size: 16px;
   }
 
   .user-page {
@@ -170,62 +194,27 @@ footer a {
     border: none;
     margin-bottom: 50px;
   }
-
-  .navigation-bar h1 {
-    font-size: 26px;
-  }
-
-  .navigation-bar {
-    margin-top: 6px;
-  }
 }
 
-@media only screen and (max-width: 500px) {
-  .navLinks li {
-    font-size: 15px;
-    margin-right: 10px;
-  }
-
-  .navigation-bar h1 {
-    font-size: 24px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .navLinks li {
-    font-size: 12px;
-    margin-right: 10px;
-  }
-
+@media only screen and (max-width: 697px) {
   .navLinks {
-    right: 0;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  .navLinks li {
+    padding: 10px 0px;
+  }
+}
+
+@media only screen and (min-width: 875px) {
+  .navigation-bar h1 {
+    font-size: 35px;
+    margin-left: 30px;
   }
 
-  .navigation-bar h1 {
+  .navLinks a {
     font-size: 20px;
-    margin-left: 10px;
-  }
-}
-
-@media only screen and (min-width: 1000px) {
-  .navLinks li {
-    font-size: 22px;
-    margin-right: 10px;
-  }
-
-  .navLinks {
-    right: 10;
-  }
-
-  .navigation-bar h1 {
-    font-size: 40px;
-    margin-left: 30px;
-  }
-}
-
-@media only screen and (min-width: 575px) {
-  .navigation-bar h1 {
-    font-size: 40px;
-    margin-left: 30px;
   }
 }
